# api-playground

./: Dashboard.py  Dockerfile  README.md  fogo-cruzado.ipynb  pyproject.toml  requirements.txt
apps/fogo_cruzado/: fogo-cruzado.ipynb  fogo_cruzado_api.py
apps/yahoo_finance/: yahoo_finance_api.py
fogo_cruzado/: fogo-cruzado.ipynb  fogo_cruzado_api.py
pages/fogo_cruzado/: data.py  fogo_cruzado.py
pages/yahoo_finance/: yahoo_finance.py
src/: Dashboard.py
src/apps/fogo_cruzado/: fogo_cruzado_api.py  page.py
src/apps/home/: home.py
