[tool.poetry]
name = "api-playground"
version = "0.1.0"
description = "API Playground, Streamlit pages exploring APIs"
authors = ["Matheus Mello de Lima <mellomatheuslima@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
streamlit = "^1.38.0"
altair = "^5.4.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
